--- a/xjc-plugin/pom.xml
+++ b/xjc-plugin/pom.xml
@@ -5,7 +5,7 @@
 
   	<groupId>de.jaxbnstuff</groupId>
 	<artifactId>xjc-plugin</artifactId>
-	<version>0.1.1-SNAPSHOT</version>
+	<version>0.1.2</version>
 	<packaging>jar</packaging>
 
 	<name>xjc-plugin</name>
